--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,113 +9,120 @@
 
     <EditText
         android:id="@+id/edtMedidaAnterior"
-        android:layout_width="match_parent"
+        android:layout_width="166dp"
         android:layout_height="38dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="28dp"
         android:background="@color/colorWhite"
         android:ems="10"
-        android:hint="Valor do medidor Anterior"
+        android:hint="Medida Anterior"
         android:inputType="numberDecimal"
         android:textColor="@color/colorPrimaryDark"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:textColorHint="@color/colorPrimaryDark"
+        app:layout_constraintEnd_toStartOf="@+id/edtMedidaAtual"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/edtMedidaAtual"
-        android:layout_width="match_parent"
+        android:layout_width="168dp"
         android:layout_height="37dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:background="@color/colorWhite"
         android:ems="10"
-        android:hint="Valor do medidor Atual"
+        android:hint="Medida Atual"
         android:inputType="numberDecimal"
+        android:textColorHint="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtMedidaAnterior" />
-
-    <TextView
-        android:id="@+id/txtResultado"
-        android:layout_width="match_parent"
-        android:layout_height="86dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@color/colorWhite"
-        android:fontFamily="sans-serif-light"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtMedidaAtual" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/edtMedidaAnterior"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btCalcular"
-        android:layout_width="wrap_content"
+        android:layout_width="164dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:background="@color/colorSteelBlue"
-        android:fontFamily="sans-serif-light"
+        android:background="@color/colorWhite"
+        android:fontFamily="casual"
         android:text="Calcular"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtResultado" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/btConsultarDados"
+        app:layout_constraintTop_toBottomOf="@+id/edtMedidaAtual" />
 
     <Button
         android:id="@+id/btConsultarDados"
-        android:layout_width="204dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/colorSteelBlue"
-        android:fontFamily="sans-serif-light"
-        android:text="Consultar outros meses"
+        android:layout_width="165dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="28dp"
+        android:background="@color/colorWhite"
+        android:fontFamily="casual"
+        android:text="Atualizar Lista"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtResultado" />
+        app:layout_constraintTop_toBottomOf="@+id/edtMedidaAnterior" />
 
-    <GridView
-        android:id="@+id/GridView"
-        android:layout_width="388dp"
-        android:layout_height="305dp"
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="367dp"
+        android:layout_height="267dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginRight="9dp"
-        android:background="@color/colorCinza"
-        android:listSelector="@color/colorWhite"
-        android:numColumns="3"
-        android:visibility="visible"
+        android:layout_marginTop="160dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtCampExcluir"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/edtCampExcluir"
+        android:layout_width="168dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:hint="Digite o id do item"
+        android:inputType="number"
+        android:textColorHint="@color/colorPrimaryDark"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btConsultarDados" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btExcluir"
+        android:layout_width="42dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="16dp"
+        android:onClick="excluirItem"
+        app:layout_constraintStart_toEndOf="@+id/edtCampExcluir"
+        app:layout_constraintTop_toBottomOf="@+id/btConsultarDados"
+        app:srcCompat="@android:drawable/ic_menu_delete"
+        tools:ignore="OnClick" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/colorSteelBlue"
-        android:fontFamily="sans-serif-light"
-        android:text="Excluir"
-        app:layout_constraintStart_toEndOf="@+id/btConsultarDados"
-        app:layout_constraintTop_toBottomOf="@+id/txtResultado" />
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="16dp" />
 
 </android.support.constraint.ConstraintLayout>
