--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#000</color>
-    <color name="colorPrimaryDark">#000</color>
+    <color name="colorPrimaryDark">#2F3138</color>
     <color name="colorAccent">#000</color>
     <color name="colorSkyBlue">#87CEEB</color>
     <color name="colorSteelBlue">#B0C4DE</color>
