--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,13 @@
     <color name="colorSkyBlue">#87CEEB</color>
     <color name="colorSteelBlue">#B0C4DE</color>
     <color name="colorRed">#FF4040</color>
-    <color name="colorCinza">#CDC1C5</color>
+    <color name="colorCinza">#CDC9C5</color>
     <color name="colorWhite">#fff</color>
+    <color name="azul1">#638fd9</color>
+    <color name="azul2">#638fd9</color>
+    <color name="azul3">#37AEB9</color>
+    <color name="amarelo1">#d69f50</color>
+    <color name="amarelo2">#e5bb52</color>
+    <color name="fundo1">#1f2224</color>
+    <color name="fundo2">#1f2224</color>
 </resources>
