adicionando funcionalidade excluir

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_marginTop="32dp"
         android:background="@color/colorWhite"
         android:ems="10"
+        android:maxLength="4"
         android:hint="Medida KWh"
         android:shadowColor="@color/fundo2"
         android:inputType="numberDecimal"
@@ -37,6 +38,7 @@
         android:layout_marginRight="8dp"
         android:background="@color/colorWhite"
         android:ems="10"
+        android:maxLength="4"
         android:hint="Medida KWh"
         android:inputType="numberDecimal"
         android:textColorHint="@color/colorCinza"
@@ -55,12 +57,12 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:background="@color/colorWhite"
+        android:backgroundTint="@color/amarelo1"
         android:fontFamily="sans-serif-smallcaps"
         android:text="Calcular"
-        android:backgroundTint="@color/amarelo1"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintHorizontal_bias="0.766"
         app:layout_constraintStart_toEndOf="@+id/btConsultarDados"
         app:layout_constraintTop_toBottomOf="@+id/edtMedidaAtual" />
 
@@ -81,8 +83,8 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="377dp"
-        android:layout_height="461dp"
+        android:layout_width="378dp"
+        android:layout_height="411dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="52dp"
@@ -102,7 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginLeft="28dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:text="Medida anterior"
         android:textColor="@color/amarelo1"
         android:textSize="20dp"
@@ -115,7 +117,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginLeft="60dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:text="Medida atual"
         android:textColor="@color/amarelo1"
         android:textSize="20dp"
