--- a/app/src/main/res/layout/activity_calculate.xml
+++ b/app/src/main/res/layout/activity_calculate.xml
@@ -171,7 +171,7 @@
         app:layout_constraintHorizontal_bias="0.027"
         app:layout_constraintStart_toStartOf="@+id/view"
         app:layout_constraintTop_toTopOf="@+id/view"
-        app:layout_constraintVertical_bias="0.091"
+        app:layout_constraintVertical_bias="0.081"
         app:srcCompat="@mipmap/ic_config_luz1" />
 
     <TextView
@@ -181,11 +181,11 @@
         android:text="Ver gráficos >>"
         android:textSize="15dp"
         android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="@+id/view"
-        app:layout_constraintHorizontal_bias="0.956"
+        app:layout_constraintHorizontal_bias="0.96"
         app:layout_constraintStart_toStartOf="@+id/view"
         app:layout_constraintTop_toBottomOf="@+id/txtValorEstipulado"
-        app:layout_constraintVertical_bias="0.936" />
+        app:layout_constraintVertical_bias="0.896" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
