adicionado tela login e conexao com firebase auth

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorCinza">#CDC9C5</color>
     <color name="colorWhite">#fff</color>
     <color name="fundo2">#1f2224</color>
+    <color name="newCinza">#D4D4D4</color>
 </resources>
