--- a/app/src/main/res/layout/activity_calculate.xml
+++ b/app/src/main/res/layout/activity_calculate.xml
@@ -14,9 +14,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="12dp"
-        android:background="@color/colorWhite"
+        android:background="@drawable/shapeedittxt"
         android:ems="10"
-        android:hint="Medida KWh"
+        android:hint=" Medida KWh"
         android:inputType="numberDecimal"
         android:maxLength="4"
         android:shadowColor="@color/fundo2"
@@ -32,13 +32,11 @@
         android:layout_width="168dp"
         android:layout_height="37dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@color/colorWhite"
+        android:background="@drawable/shapeedittxt"
         android:ems="10"
-        android:hint="Medida KWh"
+        android:hint=" Medida KWh"
         android:inputType="numberDecimal"
         android:maxLength="4"
         android:textColor="@color/colorPrimary"
@@ -57,7 +55,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:background="@color/colorWhite"
+        android:background="@drawable/shapebutton"
         android:backgroundTint="@color/colorPrimaryDark"
         android:fontFamily="sans-serif-smallcaps"
         android:text="Calcular"
@@ -74,7 +72,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginLeft="28dp"
         android:layout_marginTop="24dp"
-        android:background="@color/colorWhite"
+        android:background="@drawable/shapebutton"
         android:fontFamily="sans-serif-smallcaps"
         android:text="Atualizar Lista"
         style="@style/Widget.AppCompat.Button"
