--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<color name="colorPrimary">#000</color>
+<color name="colorBlack">#000</color>
 <color name="colorPrimaryDark">#2F3138</color>
 <color name="colorAccent">#000</color>
 <color name="colorCinza">#CDC9C5</color>
 <color name="colorWhite">#fff</color>
 <color name="fundo2">#1f2224</color>
 <color name="newCinza">#D4D4D4</color>
+<color name="colorRed">#ff0000</color>
+<color name="colorGreen">#63E676</color>
 </resources>
