--- a/app/src/main/res/layout/activity_graphic_screen.xml
+++ b/app/src/main/res/layout/activity_graphic_screen.xml
@@ -6,97 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".GraphicScreen">
 
+
+
     <com.jjoe64.graphview.GraphView
         android:id="@+id/graph"
         android:layout_width="match_parent"
         android:layout_height="400dip"
-        android:layout_marginTop="35dp"/>
+        android:layout_marginTop="35dp" />
 
-    <!--LinearLayout
-        android:layout_width = "match_parent"
-        android:layout_height = "wrap_content"
-        android:layout_alignParentBottom = "true"
-        android:layout_alignParentStart = "true"
-        android:layout_marginBottom = "191dp"
-        android:orientation = "horizontal" >
-        <LinearLayout
-            android:id = "@+id/inputOne"
-            android:layout_width = "wrap_content"
-            android:layout_height = "wrap_content"
-            android:layout_marginStart = "13dp"
-            android:orientation = "vertical" >
-            <EditText
-                android:id = "@+id/firstNum_1"
-                android:layout_width = "wrap_content"
-                android:layout_height = "wrap_content"
-                android:hint = "value x"
-                android:inputType = "number" />
-            <EditText
-                android:id = "@+id/secondNum_1"
-                android:layout_width = "wrap_content"
-                android:layout_height = "wrap_content"
-                android:hint = "value y"
-                android:inputType = "number" />
-        </LinearLayout-->
-        <!--LinearLayout
-            android:id = "@+id/inputTwo"
-            android:layout_width = "wrap_content"
-            android:layout_height = "wrap_content"
-            android:layout_marginStart = "15dp"
-            android:orientation = "vertical" >
-            <EditText
-                android:id = "@+id/firstNum_2"
-                android:layout_width = "wrap_content"
-                android:layout_height = "wrap_content"
-                android:hint = "value x"
-                android:inputType = "number" />
-            <EditText
-                android:id = "@+id/secondNum_2"
-                android:layout_width = "wrap_content"
-                android:layout_height = "wrap_content"
-                android:hint = "value y"
-                android:inputType = "number" />
-        </LinearLayout-->
-        <!--LinearLayout
-            android:id = "@+id/inputThree"
-            android:layout_width = "wrap_content"
-            android:layout_height = "wrap_content"
-            android:layout_marginStart = "15dp"
-            android:orientation = "vertical" >
-            <EditText
-                android:id = "@+id/firstNum_3"
-                android:layout_width = "wrap_content"
-                android:layout_height = "wrap_content"
-                android:hint = "value x"
-                android:inputType = "number" />
-
-            <EditText
-                android:id="@+id/secondNum_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="value y"
-                android:inputType="number" />
-        </LinearLayout-->
-        <!--LinearLayout
-            android:id = "@+id/inputFour"
-            android:layout_width = "match_parent"
-            android:layout_height = "wrap_content"
-            android:layout_marginStart = "15dp"
-            android:orientation = "vertical" >
-            <EditText
-                android:id = "@+id/firstNum_4"
-                android:layout_width = "wrap_content"
-                android:layout_height = "wrap_content"
-                android:hint = "value x"
-                android:inputType = "number" />
-            <EditText
-                android:id = "@+id/secondNum_4"
-                android:layout_width = "wrap_content"
-                android:layout_height = "wrap_content"
-                android:hint = "value y"
-                android:inputType = "number" />
-        </LinearLayout>
-    </LinearLayout-->
     <Button
         android:id = "@+id/addButton"
         android:layout_width = "wrap_content"
@@ -104,7 +21,7 @@
         android:layout_alignParentBottom = "true"
         android:layout_centerHorizontal = "true"
         android:layout_marginBottom = "17dp"
-        android:text = "upload" />
+        android:text = "Carregar Graph" />
 
 
 
