--- a/app/src/main/res/layout/activity_graphic_screen.xml
+++ b/app/src/main/res/layout/activity_graphic_screen.xml
@@ -6,23 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".GraphicScreen">
 
-
-
-    <com.jjoe64.graphview.GraphView
-        android:id="@+id/graph"
+    <com.anychart.AnyChartView
+        android:id="@+id/myColumnGraph"
         android:layout_width="match_parent"
-        android:layout_height="400dip"
-        android:layout_marginTop="35dp" />
+        android:layout_height="517dp"
+        android:layout_marginTop="52dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="53dp" />
 
     <Button
-        android:id = "@+id/addButton"
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:layout_alignParentBottom = "true"
-        android:layout_centerHorizontal = "true"
-        android:layout_marginBottom = "17dp"
-        android:text = "Carregar Graph" />
+        android:id="@+id/btVoltar"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="172dp"
+        android:layout_height="35dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="28dp"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/shapebutton"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:fontFamily="sans-serif-smallcaps"
+        android:text="Voltar"
 
+        android:textColor="@color/colorWhite" />
 
 
 </RelativeLayout>
