Create the new menu item

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,7 +5,9 @@
     <item android:id="@+id/itHelp"
         android:title="Ajuda" />
     <item android:id="@+id/itCadastrarCont"
-        android:title="Cadastrar conta\"/>
+        android:title="Cadastrar conta"/>
+    <item android:id="@+id/itCadastrarTarifa"
+        android:title="Cadastrar tarifa"/>
     <item android:id="@+id/itLimparValorRecommend"
         android:title="Limpar Valor Recomendado"/>
 </menu>
